# experiments

./: .gitignore  Makefile  README.md  matmul.dot  pixi.toml  pyproject.toml  square() performance.csv  triton.dot
asm/: triangle.asm
cexos/: add.c  add.mojo  add.py  add_v2.c  bintree.h  main.c  memleak.c  resize.c  sort.c  tryavx.c  union.c
cuda/: hello.cu  matmul.py  multithread.ipynb  triton_layernorm.py  triton_matmul.py  tuto.cu
cuda/benchmark/: matmul-performance-fp16.csv  matmul-performance-fp8.csv
machine_learning/: AutoAlgorithmRecommender.py  DatasetShapeAnalyser.py  compress.ipynb  cosine.ipynb  cosine.py  data_solver.py  moderbert.ipynb  self_compress_nn.ipynb  solution.py  std_nn.ipynb  tgrad_self_compress.ipynb
mojo/: bench_kmeans.dot  bench_kmeans.mojo  computer_info.mojo  main.mojo  mandelbro.mojo  matmul.mojo  reduce.mojo
mojo/kmeans_mojo/: utils.mojo
mojo/kmeans_python/: utils.py
mojo/tutorials/: gridv1.mojo  hello.mojo  life.mojo
numba/: ex1.py  ex2.py
python/: cuda.ipynb  decode.py  swar_ml.ipynb
tools/: sotrace.py
