[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Some experiments"
authors = ["Dakoro <david.korobetski@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
triton = "^3.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
